[tool.poetry]
name = "fruitmap-scripts"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gpxpy = "^1.6.2"
python-levenshtein = "^0.26.1"
thefuzz = "^0.22.1"
pyquery = "^2.0.1"
requests = "^2.32.3"
tqdm = "^4.67.1"
pandas = "^2.2.3"
pynput = "^1.7.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
